--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "html-webpack-plugin": "^2.30.1",
     "http-proxy-middleware": "^0.17.3",
     "inject-loader": "^3.0.0",
+    "jquery": "^3.2.1",
     "karma": "^1.4.1",
     "karma-coverage": "^1.1.1",
     "karma-mocha": "^1.3.0",
@@ -65,6 +66,7 @@
     "karma-spec-reporter": "0.0.31",
     "karma-webpack": "^2.0.2",
     "less-loader": "^4.0.5",
+    "lodash": "^4.17.4",
     "mocha": "^3.2.0",
     "nightwatch": "^0.9.12",
     "opn": "^5.1.0",
@@ -78,6 +80,7 @@
     "shelljs": "^0.7.6",
     "sinon": "^4.0.0",
     "sinon-chai": "^2.8.0",
+    "three": "^0.88.0",
     "url-loader": "^0.5.8",
     "vue-loader": "^13.3.0",
     "vue-style-loader": "^3.0.1",
